syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "envoyproxy/validate/validate.proto";

option go_package = "github.com/ozonva/ova-purchase-api/pkg/ova-purchase-api;ova_purchase_api";

service PurchaseService {
  rpc CreatePurchase(CreatePurchaseRequest) returns (CreatePurchaseResponse) {
    option (google.api.http) = {
      post: "/v1/purchases"
      body: "*"
    };
  }
  rpc DescribePurchase(DescribePurchaseRequest) returns (DescribePurchaseResponse) {
    option (google.api.http) = {
      get: "/v1/purchases/{id}"
    };
  }
  rpc ListPurchases(ListPurchasesRequest) returns (ListPurchasesResponse) {
    option (google.api.http) = {
      get: "/v1/purchases"
    };
  }
  rpc RemovePurchase(RemovePurchaseRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/purchases/{id}"
    };
  }
}

message CreatePurchaseRequest {
  message Item {
    string name = 1 [(validate.rules).string = {min_len : 1, max_len : 255}];
    double price = 2 [(validate.rules).double.gt = 0];
    uint32 quantity = 3 [(validate.rules).uint32.gt = 0];
  }
  repeated Item items = 1 [(validate.rules).repeated.min_items = 1];
}

message CreatePurchaseResponse {

  message Item {
    uint64 id = 1;
    string name = 2;
    double price = 3;
    uint32 quantity = 4;
  }

  uint64 id = 1;
  repeated Item items = 2;
  double total = 3;

  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;

  PurchaseStatus status = 6;
}

message DescribePurchaseRequest {
  uint64 id = 1;
}

message DescribePurchaseResponse {

  message Item {
    uint64 id = 1;
    string name = 2;
    double price = 3;
    uint32 quantity = 4;
  }

  uint64 id = 1;
  repeated Item items = 2;
  double total = 3;

  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  PurchaseStatus status = 6;
}

message ListPurchasesRequest {
  uint32 offset = 1;
  uint32 limit = 2;
}

message Purchase {

  message Item {
    uint64 id = 1;
    string name = 2;
    double price = 3;
    uint32 quantity = 4;
  }

  uint64 id = 1;
  repeated Item items = 2;
  double total = 3;

  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  PurchaseStatus status = 6;
}

message ListPurchasesResponse {
  uint32 total = 1;
  repeated Purchase purchases = 2;
}

message RemovePurchaseRequest {
  uint64 id = 1;
}

enum PurchaseStatus {
  Created = 0;
  Pending = 1;
  Success = 2;
  Failure = 3;
}
